@@ -4175,8 +4175,12 @@ EMIT_FUNC(return, AstReturn* ret) {
     AstLocal* result_destination = NULL;
     i64 jump_label = get_structured_jump_label(mod, Jump_Type_Return, ret->count + 1);
 
+    if (ret->from_proc) {
+        jump_label = -1;
+    }
+
     //
-    // If this is return statement if an inner return of a `do` block,
+    // If this is return statement of an inner return of a `do` block,
     // we have to get the result destination out of the return location stack.
     // This can be computed as the -ret->count element.
     //
