@@ -7,17 +7,21 @@ Additions:
     - `x |> y->z() === y->z(x)`
 - Ability to use `_` where `#auto` is used.
     - This will be come the default soon and `#auto` will be removed.
+- `return #from_proc` to return all the way from the procedure.
 
 Removals:
+- `Optional.try` as it is incompatible with new semantics of `?`.
 
 Changes:
 - `str.as_str` is now preferred over `string.as_str`
 - `str.compare` is now preferred over `string.compare`
 - `str.to_cstr_on_stack` is now preferred over `string.to_cstr_on_stack`
 - `str.join` is now preferred over `string.join`
+- Implementation of `?` for `Optional` and `Result` to return from the enclosing procedure.
 
 Bugfixes:
 - Fixed WASI compilation due to syntax issue.
+- Fixed WASI platform `__file_open` implementation for wasmtime.
 
 Contributors:
 
